--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,45 +2,64 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.guokrspace.duducar.MainActivity">
+    tools:context="com.guokrspace.duducar.PreOrderActivity">
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.baidu.mapapi.map.MapView
-            android:id="@+id/bmapView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:clickable="true"
-            android:layout_marginTop="50dp" />
-
-        <Button
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:id="@+id/buttonLoc"
-            android:text = "定位"/>
+            android:id="@+id/mainmapview">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Y"
-            android:id="@+id/buttonPin"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/popup" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+            <com.baidu.mapapi.map.MapView
+                android:id="@+id/bmapView"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="50dp"
+                android:clickable="true"/>
+            </LinearLayout>
 
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="top"
-            android:id="@+id/search_button"
-            android:text="搜索" />
-    </FrameLayout>
+            <Button
+                android:id="@+id/buttonLoc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:text="定位"/>
+
+            <Button
+                android:id="@+id/buttonPin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/popup"
+                android:text="Y"/>
+
+            <Button
+                android:id="@+id/search_button"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="top"
+                android:text="搜索"/>
+        </FrameLayout>
+
+        <!--<com.guokrspace.duducar.ui.OrderConfirmationView-->
+            <!--android:visibility="gone"-->
+            <!--android:id="@+id/orderConfirmView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/mainmapview">-->
+        <!--</com.guokrspace.duducar.ui.OrderConfirmationView>-->
+    </LinearLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
