--- a/app/src/main/res/layout/order_confirmation_view.xml
+++ b/app/src/main/res/layout/order_confirmation_view.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Alipay"
+            android:text="支付宝"
             android:id="@+id/textViewPayDesc"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center_vertical"/>
@@ -48,7 +48,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cost Estimate"
+                android:text="费用估算"
                 android:id="@+id/textViewCostEst"
                 android:layout_gravity="center"/>
         </LinearLayout>
@@ -70,7 +70,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cupon"
+                android:text="优惠劵"
                 android:id="@+id/textViewCupon"
                 android:layout_gravity="center"/>
         </LinearLayout>
@@ -80,13 +80,13 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Call A Cab"
+        android:text="确认叫车"
         android:id="@+id/orderCabButton"/>
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="The cab arrives in x minutes"
+        android:text="叫车将于3分钟后到达"
         android:id="@+id/timeToArriveTextView"
         android:gravity="center"/>
 
