--- a/app/src/main/res/layout/order_confirmation_view.xml
+++ b/app/src/main/res/layout/order_confirmation_view.xml
@@ -1,93 +1,94 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/selectPaymentLLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:id="@+id/selectPaymentLLayout">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <ImageView
+            android:id="@+id/imageViewPayIcon"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:id="@+id/imageViewPayIcon"
-            android:background="@drawable/ic_drawer"/>
+            android:background="@drawable/ic_drawer" />
 
         <TextView
+            android:id="@+id/textViewPayDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Alipay"
-            android:id="@+id/textViewPayDesc"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"/>
+            android:text="Alipay" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/costEstimateLLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="50"
-            android:id="@+id/costEstimateLLayout">
+            android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:id="@+id/imageView"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_drawer"/>
+                android:background="@drawable/ic_drawer" />
 
             <TextView
+                android:id="@+id/textViewCostEst"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cost Estimate"
-                android:id="@+id/textViewCostEst"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:text="Cost Estimate" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/cuponLLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="50"
-            android:id="@+id/cuponLLayout">
+            android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:id="@+id/imageView2"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_drawer"/>
+                android:background="@drawable/ic_drawer" />
 
             <TextView
+                android:id="@+id/textViewCupon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cupon"
-                android:id="@+id/textViewCupon"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:text="Cupon" />
         </LinearLayout>
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/orderCabButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Call A Cab"
-        android:id="@+id/orderCabButton"/>
+        android:text="Call A Cab" />
 
     <TextView
+        android:id="@+id/timeToArriveTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="The cab arrives in x minutes"
-        android:id="@+id/timeToArriveTextView"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="The cab arrives in x minutes" />
 
 </LinearLayout>
