--- a/driver_pro/app/src/main/res/values/dimens.xml
+++ b/driver_pro/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
 
     <dimen name="padding_indicator">12dp</dimen>
     <dimen name="text_size_indicator">18dp</dimen>
+    <dimen name="grid_item_margin">5dp</dimen>
 </resources>
