--- a/driver_pro/app/src/main/res/values/styles.xml
+++ b/driver_pro/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/deep_blue</item>
         <item name="colorAccent">@color/material_deep_teal_200</item>
         <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
+        <item name="android:listDivider">@android:drawable/divider_horizontal_bright</item>
     </style>
 
     <style name="LogoTheme" parent="Theme.AppCompat.Light.NoActionBar">
