司机端增加地图，通讯能力

--- a/driver_pro/app/src/main/res/layout/order_list_item.xml
+++ b/driver_pro/app/src/main/res/layout/order_list_item.xml
@@ -5,7 +5,8 @@
     android:background="#00ffffff"
     android:paddingTop="10dp"
     android:paddingBottom="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/itemLLayout">
 
     <RelativeLayout
         android:layout_width="fill_parent"
