--- a/driver_pro/app/src/main/res/layout/fragment_main.xml
+++ b/driver_pro/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.guokrspace.dududriver.ui.OldMainActivity$PlaceholderFragment">
+    tools:context="com.guokrspace.dududriver.ui.PostOrderActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
