--- a/driver_pro/app/src/main/res/layout/activity_main.xml
+++ b/driver_pro/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"></android.support.v4.view.ViewPager>
-    <include layout="@layout/button_group_view" />
+    <include
+        android:id = "@+id/button_group_layout"
+        layout="@layout/button_group_view" />
 </LinearLayout>
 
