--- a/driver_pro/app/src/main/res/layout/fragment_me.xml
+++ b/driver_pro/app/src/main/res/layout/fragment_me.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/avatar_civ"
-            android:text="王勇欺"
+            android:text="司机老李"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
