完成主线程大部分界面，包括去送乘客（PickUpPassengerActivity）界面完善了百度地图添加路线，确认账单界面（ConfirmBillActivity）,确认账单对话框，订单详情界面（OrderDetailActivity）

--- a/driver_pro/app/src/main/res/values/colors.xml
+++ b/driver_pro/app/src/main/res/values/colors.xml
@@ -31,4 +31,5 @@
     <color name="orange">#ffa000</color>
     <color name="translucent_black">#660A0A0A</color>
     <color name="translucent_white">#55FFFFFF</color>
+    <color name="holo_red_light">#ffff4444</color>
 </resources>
