--- a/driver_pro/app/src/main/res/layout/activity_pickuppassenger.xml
+++ b/driver_pro/app/src/main/res/layout/activity_pickuppassenger.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -101,43 +103,48 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:background="@drawable/gray_frame_shape">
+        android:background="@drawable/gray_frame_shape"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/illustration_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
             android:singleLine="true"
             android:text="去友阿百货送尾号4188"
-            android:layout_centerVertical="true"
-            android:textSize="20sp"
-            android:layout_marginLeft="20dp"/>
-        <ImageButton android:id="@+id/navi_passenger"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/navi_passenger"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
+            android:layout_marginBottom="6dp"
             android:layout_marginRight="10dp"
-            android:background="@mipmap/navigate"/>
+            android:layout_marginTop="6dp"
+            android:background="@mipmap/navigate" />
     </RelativeLayout>
-    <com.baidu.mapapi.map.MapView android:id="@+id/pickup_mapview"
+
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/pickup_mapview"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
-        android:layout_weight="1"
-        />
-    <Button android:id="@+id/confirm_button"
+        android:layout_weight="1" />
+
+    <com.gc.materialdesign.views.ButtonRectangle
+        android:id="@+id/confirm_button"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
+        android:layout_marginBottom="6dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="6dp"
         android:background="@color/orange"
-        android:text="确认乘客上车"
         android:gravity="center"
+        android:text="确认乘客上车"
         android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="22sp"/>
+        android:textSize="6sp"
+        android:textStyle="bold" />
 </LinearLayout>
