--- a/app/src/main/res/layout/content_order_cab.xml
+++ b/app/src/main/res/layout/content_order_cab.xml
@@ -6,10 +6,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_order_cab"
     tools:context="com.guokrspace.duducar.PostOrderActivity">
@@ -21,55 +17,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
-
-    <FrameLayout
-        android:orientation="horizontal"
-        android:id="@+id/startPointLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="false"
-        android:layout_below="@+id/progressBar">
-
-        <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:id="@+id/imageView3"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="西二旗北路"
-            android:id="@+id/textViewStart"/>
-    </FrameLayout>
-
-    <FrameLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/destSearchLinearLayout"
-        android:layout_below="@+id/startPointLinearLayout">
-
-        <ImageView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:id="@+id/imageViewSearchIcon"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="输入目的地"
-            android:id="@+id/textViewDestination"/>
-    </FrameLayout>
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true" />
 
     <LinearLayout
         android:id="@+id/bmapLayout"
+        android:layout_below="@+id/progressBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/destSearchLinearLayout">
+        android:layout_height="match_parent">
     <com.baidu.mapapi.map.MapView
         android:id="@+id/bmapView"
         android:layout_width="match_parent"
@@ -77,12 +32,73 @@
         android:clickable="true"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progressBar"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:background="@drawable/white_transparent_with_border_background"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="2dp"
+                android:layout_gravity="left"
+                android:src="@drawable/startindicator"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="岳麓大道338号"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:layout_weight="90"
+                android:id="@+id/textViewStart" />
+        </FrameLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#7fcccccc"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_gravity="left"
+                android:src="@drawable/destindicator"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="火车站"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:layout_weight="90"
+                android:id="@+id/textViewDestination" />
+        </FrameLayout>
+    </LinearLayout>
+
     <com.guokrspace.duducar.ui.DriverInformationView
         android:id="@+id/driverView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_marginBottom="-200dp"
         android:layout_below="@+id/bmapLayout"
-        android:background="@android:color/white"
-        android:layout_marginBottom="-200dp">
+        android:layout_height="200dp"
+        android:background="@android:color/white">
     </com.guokrspace.duducar.ui.DriverInformationView>
 </RelativeLayout>
