--- a/app/src/main/res/layout/driver_information_view.xml
+++ b/app/src/main/res/layout/driver_information_view.xml
@@ -1,94 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_below="@+id/headFrameLayout"
+        android:background="@android:color/white"
+        android:layout_marginTop="-30dp">
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="@style/heartRatingBar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:numStars="5"
+            android:rating="4" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ratingBar">
+
+            <LinearLayout
+                android:id="@+id/driverDescLLayout"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewDriverName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:gravity="center"
+                    android:text="王师傅"
+                    android:textSize="10pt" />
+
+                <ImageView
+                    android:id="@+id/imageViewPhoneIcon"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:src="@drawable/ic_phoneicon" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/carDescLLayout"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:visibility="invisible">
+
+                <TextView
+                    android:id="@+id/textViewCarPlateNumber"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:gravity="center"
+                    android:text="湘F-1200234234"
+                    android:textSize="10pt" />
+
+                <TextView
+                    android:id="@+id/textViewCarDesc"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="50"
+                    android:gravity="center"
+                    android:text="起亚i3"
+                    android:textSize="10pt" />
+            </LinearLayout>
+        </FrameLayout>
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/imageViewCar"
-            android:layout_gravity="center"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_drawer"
-            app:border_width="1dp"
-            app:border_color="#FF000000"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/imageViewDriver"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_drawer"
-            app:border_width="1dp"
-            app:border_color="#FF000000"/>
-
-
-    </FrameLayout>
-
-    <RatingBar
-        android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        />
+        android:id="@+id/headFrameLayout"
+        android:background="@android:color/transparent">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imageViewCar"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_drawer"
+            app:border_color="#FF000000"
+            app:border_width="1dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/driverDescLLayout"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewDriverName"
-                android:layout_width="0dp"
-                android:layout_weight="50"
-                android:layout_height="wrap_content"
-                android:text="王师傅"
-                android:gravity="center"/>
-
-            <ImageView
-                android:id="@+id/imageViewPhoneIcon"
-                android:layout_width="0dp"
-                android:layout_weight="50"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_phone_black_24dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_gravity="center_horizontal"
-            android:visibility="invisible"
-            android:id="@+id/carDescLLayout"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewCarPlateNumber"
-                android:layout_width="0dp"
-                android:layout_weight="50"
-                android:layout_height="wrap_content"
-                android:text="F1200234234"
-                android:gravity="center"/>
-            <TextView
-                android:id="@+id/textViewCarDesc"
-                android:layout_width="0dp"
-                android:layout_weight="50"
-                android:layout_height="wrap_content"
-                android:text="起亚i3"
-                android:gravity="center"/>
-        </LinearLayout>
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imageViewDriver"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_drawer"
+            app:border_color="#FF000000"
+            app:border_width="1dp" />
     </FrameLayout>
-
-</LinearLayout>
+</RelativeLayout>
