--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -10,10 +10,11 @@
     </style>
 
     <style name="ActionBar" parent="Widget.AppCompat.Light.ActionBar">
-        <item name="android:background">@color/de_title_bg</item>
+        <item name="android:background">@color/de_actionbar_bg</item>
         <item name="android:titleTextStyle">@style/ActionBarTextStyle</item>
         <item name="background">@color/de_actionbar_bg</item>
         <item name="titleTextStyle">@style/ActionBarTextStyle</item>
+        <item name="android:icon">@drawable/drawericon</item>
     </style>
 
     <style name="ActionBarTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
